experimental upgrade to clj 1.9